tests/ui/errors/auxiliary/trait.rs
pub trait Trait: std::fmt::Display {}
